trunk/Archive2/ce/06708ec506c9a0/output
main.cpp:1:13: error: backslash-newline at end of file
 #define FOO \
 ^
